// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`edits and saves the lmstudio provider 1`] = `
{
  "buttons": [
    "LM Studiolmstudio",
    "Ollamaollama",
    "Add provider",
    "Check balance",
    "Add model",
    "Delete",
    "Save",
  ],
  "fields": [
    {
      "disabled": false,
      "readOnly": true,
      "value": "lmstudio",
    },
    {
      "disabled": false,
      "readOnly": false,
      "value": "LM Studio",
    },
    {
      "disabled": false,
      "readOnly": false,
      "value": "http://localhost:1234/v1",
    },
    {
      "disabled": false,
      "readOnly": false,
      "value": "",
    },
    {
      "disabled": false,
      "readOnly": false,
      "value": "",
    },
  ],
  "note": [
    "Only providers defined in your Workx configuration are listed. Changes are saved to that configuration.",
    "No custom models yet.",
  ],
}
`;

exports[`edits and saves the ollama provider 1`] = `
{
  "buttons": [
    "LM Studiolmstudio",
    "Ollamaollama",
    "Add provider",
    "Check balance",
    "Add model",
    "Delete",
    "Save",
  ],
  "fields": [
    {
      "disabled": false,
      "readOnly": true,
      "value": "ollama",
    },
    {
      "disabled": false,
      "readOnly": false,
      "value": "Ollama",
    },
    {
      "disabled": false,
      "readOnly": false,
      "value": "http://localhost:11434/v1",
    },
    {
      "disabled": false,
      "readOnly": false,
      "value": "",
    },
    {
      "disabled": false,
      "readOnly": false,
      "value": "",
    },
  ],
  "note": [
    "Only providers defined in your Workx configuration are listed. Changes are saved to that configuration.",
    "No custom models yet.",
  ],
}
`;
